[package]
name = "scru128"
version = "4.0.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "SCRU128: Sortable, Clock and Random number-based Unique identifier"
repository = "https://github.com/scru128/rust"
documentation = "https://docs.rs/scru128"
keywords = ["identifier", "uuid", "guid", "ulid", "ksuid"]
categories = ["algorithms"]

[features]
default = ["global_gen"]
std = ["fstr/std"]
rand09 = ["dep:rand_core09"]
rand010 = ["dep:rand_core010"]
global_gen = ["std", "dep:rand", "dep:forkguard", "dep:reseeding_rng"]
serde = ["dep:serde"]

[dependencies]
fstr = { version = "0.2", default-features = false }
forkguard = { version = "0.1", optional = true }
reseeding_rng = { version = "0.10", optional = true }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng"], optional = true }
rand_core09 = { package = "rand_core", version = "0.9", default-features = false, optional = true }
rand_core010 = { package = "rand_core", version = "0.10", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.10"
regex = { version = "1.12", default-features = false, features = ["std"] }
serde_test = "1.0"

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
